[package]
name = "roblox_api"
version = "0.1.0"
edition = "2021"
description = "Library for roblox apis"

[dependencies]
reqwest = {version = "0", features = ["gzip", "brotli", "deflate", "json", "socks", "cookies"]}
bounded-integer = {version = "0", features = ["std", "types", "serde1"]}
thiserror = "1"
itertools = "0"
tracing = "0"
async-trait = "0"
serde = {version = "1", features = ["derive"]}
bytes = "1"
fxhash = "0"
chrono = {version = "0", features = ["serde"]}
parking_lot = {version = "0", features = ["hardware-lock-elision"]}
