[package]
name = "roblox_api_ratelimit_measurer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
roblox_api = {git = "https://github.com/longlinh123456/roblox_api.git"}
tokio = {version = "1", features = ["rt", "rt-multi-thread", "time", "macros", "parking_lot"]}